WATCH OUT: I think I might be re-interpreting BPCs and how they work when they are internal to a collection...   might not be able to fix this tonight, but want to push these changes for tomorrow morning.  Also Contact jacobians WILL need body frame info after all... still on the todo list, and an easier fix than the other weird stuff that's going on.

--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
@@ -1,3 +1,4 @@
+<font face="Tahoma">
    <b>KEYBOARD</b><br/>          		
    SPACE : start and stop simulation <br/>
    R : reset the simulation <br/>
@@ -17,4 +18,6 @@
    left drag : rotate scene <br/>
    middle drag : translate scene <br/>
    right drag : dolly in and out <br/>
-   shift + left drag : mouse spring<br/> 
+   SHIFT + left drag : mouse spring<br/> 
+   CTRL + left drag : z rotation</br>
+</font>
