--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/xmlSpec.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/xmlSpec.html
@@ -1,4 +1,4 @@
-<div width=500">
+<div width="500"><font face="Tahoma">
 <p>The scene file has one<root></root> element that containing bodies and collision properties.
 
 <p>&lt;body&gt; tags have required attributes:
@@ -38,5 +38,6 @@ have required attributes that must appear after the tag:
 <li>	&lt;col&gt; r g b &lt;/col&gt;<br/>
 		A body material colour with [0,1] RGB values.
 </ul>
+</font>
 </div>
 		
