[Impulse] added to 3D and cleaned 2D version

--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
@@ -11,13 +11,14 @@
    &darr : half step size and half sub steps (stops at 1 substep)<br/> 
    &larr : previous scene<br/> 
    &rarr : next scene<br/>
-   J : jiggle all bodies
-   . : factory run toggle
-   , : factory create a single body
+   J : jiggle all bodies<br/>
+   . : factory run toggle<br/>
+   , : factory create a single body<br/>
    <b>MOUSE </b><br/>
    left drag : rotate scene <br/>
    middle drag : translate scene <br/>
    right drag : dolly in and out <br/>
    SHIFT + left drag : mouse spring<br/> 
+   CTRL + middle drag : mouse impulse<br/> 
    CTRL + left drag : z rotation</br>
 </font>
