--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
@@ -1,24 +1,26 @@
 <font face="Tahoma">
-   <b>KEYBOARD</b><br/>          		
+   <b>KEYBOARD</b><br/>
    SPACE : start and stop simulation <br/>
    R : reset the simulation <br/>
-   C : clear the scene (everything!) 
-   ENTER : start and stop recording <br/> 
-   M : simulate up to next merge or unmerge <br/> 
-   L : load a file <br/> 
-   F : load as a factory <br/> 
-   &uarr : double step size and sub steps<br/> 
-   &darr : half step size and half sub steps (stops at 1 substep)<br/> 
-   &larr : previous scene<br/> 
+   C : clear the scene (everything!)
+   ENTER : start and stop recording <br/>
+   M : simulate up to next merge or unmerge <br/>
+   L : load a file <br/>
+   F : load as a factory <br/>
+   K : reload <br/>
+   &uarr : double step size and sub steps<br/>
+   &darr : half step size and half sub steps (stops at 1 substep)<br/>
+   &larr : previous scene<br/>
    &rarr : next scene<br/>
    J : jiggle all bodies<br/>
    . : factory run toggle<br/>
    , : factory create a single body<br/>
+   O : hide/display overlay <br/>
    <b>MOUSE </b><br/>
    left drag : rotate scene <br/>
    middle drag : translate scene <br/>
    right drag : dolly in and out <br/>
-   SHIFT + left drag : mouse spring<br/> 
-   CTRL + middle drag : mouse impulse<br/> 
+   SHIFT + left drag : mouse spring<br/>
+   CTRL + middle drag : mouse impulse<br/>
    CTRL + left drag : z rotation</br>
 </font>
