--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
@@ -2,7 +2,9 @@
    <b>KEYBOARD</b><br/>
    SPACE : start and stop simulation <br/>
    R : reset the simulation <br/>
+   SHIFT + R : reload the scene file <br/>
    C : clear the scene (everything!)
+   H : toggle hiding overlay
    ENTER : start and stop recording <br/>
    M : simulate up to next merge or unmerge <br/>
    L : load a file <br/>
