SORRY! my very bad inertia computation bug fixed... p was not the displacement from the COM.  Also cleaned up my duplication of new keyboard controls.

--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
@@ -3,13 +3,14 @@
    SPACE : start and stop simulation <br/>
    R : reset the simulation <br/>
    SHIFT + R : reload the scene file <br/>
+   K : reload klean! (same as shift+R) <br/>
    C : clear the scene (everything!)
-   H : toggle hiding overlay
+   H : hide/display overlay <br/>
+   O : hide/display overlay <br/>
    ENTER : start and stop recording <br/>
    M : simulate up to next merge or unmerge <br/>
    L : load a file <br/>
    F : load as a factory <br/>
-   K : reload <br/>
    &uarr : double step size and sub steps<br/>
    &darr : half step size and half sub steps (stops at 1 substep)<br/>
    &larr : previous scene<br/>
@@ -17,7 +18,6 @@
    J : jiggle all bodies<br/>
    . : factory run toggle<br/>
    , : factory create a single body<br/>
-   O : hide/display overlay <br/>
    <b>MOUSE </b><br/>
    left drag : rotate scene <br/>
    middle drag : translate scene <br/>
