Fixed factor loading bug that was clearing springs when factory was being initialized

--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
@@ -11,6 +11,8 @@
    M : simulate up to next merge or unmerge <br/>
    L : load a file <br/>
    F : load as a factory <br/>
+   Q : Spin all "Spinner" bodies around spinning axis <br/>
+   W : Spin all "Spinner" bodies in opposite direction to spinning axis <br/>
    &uarr : double step size and sub steps<br/>
    &darr : half step size and half sub steps (stops at 1 substep)<br/>
    &larr : previous scene<br/>
