exposed controllable spring parameters on interface.

--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
@@ -13,14 +13,14 @@
    F : load as a factory <br/>
    Q : Spin all "Spinner" bodies around spinning axis <br/>
    W : Spin all "Spinner" bodies in opposite direction to spinning axis <br/>
-   ALT + Q : move controllable springs up</br>
-   ALT + E : move controllable springs down</br>
-   ALT + W : move controllable springs forward</br>
-   ALT + S : move controllable springs backward</br>
-   ALT + A : move controllable springs left</br>
-   ALT + D : move controllable springs right</br>
-   ALT + &uarr : decrease length of controllable spring</br>
-   ALT + &darr : increase length of controllable spring</br>
+   ALT + Q : move controllable springs up<br/>
+   ALT + E : move controllable springs down<br/>
+   ALT + W : move controllable springs forward<br/>
+   ALT + S : move controllable springs backward<br/>
+   ALT + A : move controllable springs left<br/>
+   ALT + D : move controllable springs right<br/>
+   ALT + &uarr : decrease length of controllable spring<br/>
+   ALT + &darr : increase length of controllable spring<br/>
    &uarr : double step size and sub steps<br/>
    &darr : half step size and half sub steps (stops at 1 substep)<br/>
    &larr : previous scene<br/>
