[All] list of changes: 1- minor LCPApp cleaning (we were always loosing time trying to find a parameter) 2- iterations and mouse striffness, damping can now be set in xml 3- houseOfCards example with default mouse spring stiffness and damping 4- minor changes in chariot and boat example

--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
@@ -3,10 +3,8 @@
    SPACE : start and stop simulation <br/>
    R : reset the simulation <br/>
    SHIFT + R : reload the scene file <br/>
-   K : reload klean! (same as shift+R) <br/>
-   C : clear the scene (everything!)
+   C : clear and reload the scene (everything!) <br/>
    H : hide/display overlay <br/>
-   O : hide/display overlay <br/>
    ENTER : start and stop recording <br/>
    M : simulate up to next merge or unmerge <br/>
    L : load a file <br/>
