[System-CollisionProc] added generate body (press G), don't compute collision detection between sleeping and pinned bodies

--- a/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/src/mergingBodies3D/resources/interfaceHelp.html
@@ -9,6 +9,7 @@
    M : simulate up to next merge or unmerge <br/>
    L : load a file <br/>
    F : load as a factory <br/>
+   G : generate a body <br/>
    Q : Spin all "Spinner" bodies around spinning axis <br/>
    W : Spin all "Spinner" bodies in opposite direction to spinning axis <br/>
    ALT + Q : move controllable springs up<br/>
